# Depth-Anything-3-for-CoreML

./: .gitignore  README.md  da3_README.md  pyproject.toml
coreml_converter/: convert2coreml.py
notebooks/: da3.ipynb
src/depth_anything_3/: api.py  cfg.py  cli.py  specs.py
src/depth_anything_3/app/: css_and_html.py  gradio_app.py
src/depth_anything_3/app/modules/: __init__.py  event_handlers.py  file_handlers.py  model_inference.py  ui_components.py  utils.py  visualization.py
src/depth_anything_3/model/: cam_dec.py  cam_enc.py  da3.py  gs_adapter.py  gsdpt.py
src/depth_anything_3/model/dinov2/: dinov2.py  vision_transformer.py
src/depth_anything_3/model/dinov2/layers/: attention.py  block.py  drop_path.py  layer_scale.py  mlp.py  patch_embed.py  rope.py  swiglu_ffn.py
src/depth_anything_3/model/utils/: attention.py  block.py  gs_renderer.py  head_utils.py  transform.py
src/depth_anything_3/services/: backend.py  gallery.py  inference_service.py  input_handlers.py
src/depth_anything_3/utils/: alignment.py  camera_trj_helpers.py  geometry.py  gsply_helpers.py  layout_helpers.py  logger.py  memory.py  model_loading.py  parallel_utils.py  pca_utils.py  pose_align.py  read_write_model.py  registry.py  sh_helpers.py  visualize.py
src/depth_anything_3/utils/export/: __init__.py  colmap.py  depth_vis.py  feat_vis.py  glb.py  gs.py  npz.py
src/depth_anything_3/utils/io/: input_processor.py  output_processor.py
