[project]
name = "depth-anything-3-for-coreml"
version = "0.1.0"
description = "depth-anything-3-for-coreml"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "coremltools>=9.0",
    "einops>=0.8.1",
    "huggingface-hub>=1.1.5",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
